# mygl

./: Cargo.toml  README.md
.github/workflows/: test.yml  validate.yml
examples/: shared.rs  square.rs  texture.rs  triangle.rs  triangles.rs
examples/shaders/: texture.frag  texture.vert  triangle.frag  triangle.vert
src/: debug.rs  error.rs  lib.rs  rendering.rs  shader.rs  shaders.rs  textures.rs
src/vao/: builder.rs  data_source.rs  mod.rs
